# Step 3: Build Backend từ file pipeline của OpenWebUI trước mình build

--- a/src/back-end/.env.example
+++ b/src/back-end/.env.example
@@ -8,3 +8,6 @@ HUGGINGFACE_API_KEY= "<HUGGINGFACE_API_KEY>"
 
 # OPENAI API KEY FOR EMBEDDING AND CHAT
 OPENAI_API_KEY= "<OPENAI_API_KEY>"
+
+# COLLECTION NAME
+COLLECTION_NAME= "<COLLECTION_NAME>"
