--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,11 +1,41 @@
 version: '3.8'
 
 services:
+
+
+  backend:
+    build:
+      context: ./back-end
+      dockerfile: Dockerfile
+    image: chatbot-rag-backend:latest
+    container_name: chatbot-rag-backend
+    ports:
+      - "30000:30000"
+    environment:
+      - QDRANT_URL=${QDRANT_URL}
+      - QDRANT_API_KEY=${QDRANT_API_KEY}
+      - COLLECTION_NAME=${COLLECTION_NAME:-legal_rag}
+      - HUGGINGFACE_API_KEY=${HUGGINGFACE_API_KEY}
+      - EMBEDDINGS_MODEL_NAME=${EMBEDDINGS_MODEL_NAME:-sentence-transformers/paraphrase-multilingual-mpnet-base-v2}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+    volumes:
+      - ./back-end/.env:/app/.env
+    restart: unless-stopped
+    networks:
+      - nttu-network
+    # Problem might be with healthcheck - commenting out temporarily
+    # healthcheck:
+    #   test: ["CMD", "curl", "-f", "http://localhost:30000/health"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    #   start_period: 40s
   frontend:
     build:
       context: ./front-end
       dockerfile: Dockerfile
-    container_name: nttu-chatbot-frontend
+    image: chatbot-rag-frontend:latest
+    container_name: chatbot-rag-frontend
     ports:
       - "30001:30001"
     restart: unless-stopped
@@ -13,7 +43,8 @@ services:
       - nttu-network
     volumes:
       - ./front-end/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-
+    depends_on:
+      - backend
 networks:
   nttu-network:
     driver: bridge 
