--- a/src/front-end/nginx.conf
+++ b/src/front-end/nginx.conf
@@ -7,6 +7,15 @@ server {
         try_files $uri $uri/ /index.html;
     }
     
+    # Proxy API requests to backend
+    location /api/ {
+        proxy_pass http://chatbot-rag-backend:30000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
     # Cache control for static assets
     location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
         root /usr/share/nginx/html;
