--- a/src/front-end/docker-compose.frontend.yml
+++ b/src/front-end/docker-compose.frontend.yml
@@ -14,6 +14,17 @@ services:
       - nttu-network
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:30001"]
+      interval: 20s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 networks:
   nttu-network:
