--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - ./back-end/.env:/app/.env
     restart: unless-stopped
     networks:
-      - nttu-network
+      - RAG-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:30000/health"]
       interval: 30s
@@ -45,7 +45,7 @@ services:
       - ./front-end/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     restart: unless-stopped
     networks:
-      - nttu-network
+      - RAG-network
     depends_on:
       - backend
     healthcheck:
@@ -61,5 +61,5 @@ services:
         max-file: "3"
 
 networks:
-  nttu-network:
+  RAG-network:
     driver: bridge 
