--- a/src/front-end/docker-compose.frontend.yml
+++ b/src/front-end/docker-compose.frontend.yml
@@ -11,7 +11,7 @@ services:
       - "30001:30001"
     restart: unless-stopped
     networks:
-      - nttu-network
+      - RAG-network
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     healthcheck:
@@ -27,5 +27,5 @@ services:
         max-file: "3"
 
 networks:
-  nttu-network:
+  RAG-network:
     driver: bridge 
