Fix Docker Compose conflicts between multiple projects
PROBLEM:
When running multiple Docker Compose projects in directories with the same name ('src'),
we encountered several critical issues:

1. Project name conflicts:
   - Both projects defaulted to using 'src' as the project name
   - This caused container naming conflicts (src-backend-1, src-frontend-1)
   - Docker showed 4 containers when only 2 were actually running

2. Network conflicts:
   - Docker couldn't find available IP address pools for new networks
   - Error: 'could not find an available, non-overlapping IPv4 address pool'
   - Subsequent attempts resulted in 'Pool overlaps with other address space'

3. Resource management issues:
   - The system had 33+ existing Docker networks
   - Default Docker network ranges were exhausted
   - No clear separation between project resources

SOLUTION:
1. Added explicit project names in docker-compose.yml files:
   - 'name: legal-chatbot' for the Legal Chatbot project
   - 'name: content-generation' for the Content Generation project

2. Created dedicated networks with fixed names:
   - Replaced 'RAG-network' with 'legal-chatbot-network'
   - Replaced 'app-network' with 'content-gen-network'
   - Used 'name:' property to ensure consistent network naming

3. Removed IPAM subnet configurations:
   - Removed explicit subnet configurations that were causing conflicts
   - Let Docker automatically assign appropriate network ranges

4. Implemented proper resource cleanup:
   - Added documentation for running 'docker network prune -f'
   - Documented proper shutdown procedures between deployments

BENEFITS:
1. Clear separation between projects
2. Predictable container and network naming
3. Eliminated IP address pool conflicts
4. Improved system stability and maintainability
5. Better resource management

This fix ensures that both applications can run simultaneously on the same host
without interfering with each other, even when located in similarly named directories.
T

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,5 +1,7 @@
 version: '3.8'
 
+name: legal-chatbot
+
 services:
   backend:
     build:
@@ -20,7 +22,7 @@ services:
       - ./back-end/.env:/app/.env
     restart: unless-stopped
     networks:
-      - RAG-network
+      - legal-chatbot-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:30000/health"]
       interval: 30s
@@ -45,7 +47,7 @@ services:
       - ./front-end/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     restart: unless-stopped
     networks:
-      - RAG-network
+      - legal-chatbot-network
     depends_on:
       - backend
     healthcheck:
@@ -61,5 +63,5 @@ services:
         max-file: "3"
 
 networks:
-  RAG-network:
-    driver: bridge 
+  legal-chatbot-network:
+    name: legal-chatbot-network 
