--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@supabase/supabase-js": "^2.49.4",
     "daisyui": "^2.50.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
