--- a/src/embedding-model-offline/app/requirements.txt
+++ b/src/embedding-model-offline/app/requirements.txt
@@ -1,13 +1,49 @@
-torch>=2.0.1
-torchvision>=0.15.0
-sentence-transformers==2.2.2
-huggingface-hub==0.15.1
-transformers==4.30.2
-onnx==1.14.0
-onnxruntime==1.15.1
-fastapi==0.100.0
-uvicorn==0.23.1
-numpy>=1.24.0
-scikit-learn>=1.0.0
-tqdm>=4.65.0
-requests>=2.31.0 
+anyio==4.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.0
+colorama==0.4.6
+coloredlogs==15.0.1
+fastapi==0.97.0
+filelock==3.13.1
+flatbuffers==25.2.10
+fsspec==2024.6.1
+h11==0.16.0
+huggingface-hub==0.31.2
+humanfriendly==10.0
+idna==3.10
+Jinja2==3.1.4
+joblib==1.5.0
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.3
+nltk==3.9.1
+numpy==2.1.2
+onnx==1.18.0
+onnxruntime==1.22.0
+packaging==25.0
+pillow==11.0.0
+protobuf==6.31.0
+pydantic==1.10.8
+pyreadline3==3.5.4
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.3
+sentence-transformers==4.1.0
+sentencepiece==0.2.0
+setuptools==70.2.0
+sniffio==1.3.1
+starlette==0.27.0
+sympy==1.13.3
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.7.0+cu118
+torchvision==0.22.0+cu118
+tqdm==4.67.1
+transformers==4.51.3
+typing_extensions==4.12.2
+urllib3==2.4.0
+uvicorn==0.22.0
