--- a/src/embedding-model-offline/app/requirements.txt
+++ b/src/embedding-model-offline/app/requirements.txt
@@ -1,7 +1,7 @@
 anyio==4.9.0
-certifi==2025.4.26
+certifi==2024.2.2
 charset-normalizer==3.4.2
-click==8.2.0
+click==8.1.7
 colorama==0.4.6
 coloredlogs==15.0.1
 fastapi==0.97.0
@@ -16,11 +16,11 @@ Jinja2==3.1.4
 joblib==1.5.0
 MarkupSafe==2.1.5
 mpmath==1.3.0
-networkx==3.3
+networkx==3.2.1
 nltk==3.9.1
-numpy==2.1.2
+numpy==1.24.3
 onnx==1.18.0
-onnxruntime==1.22.0
+onnxruntime==1.19.0
 packaging==25.0
 pillow==11.0.0
 protobuf==6.31.0
@@ -40,8 +40,8 @@ starlette==0.27.0
 sympy==1.13.3
 threadpoolctl==3.6.0
 tokenizers==0.21.1
-torch==2.7.0+cu118
-torchvision==0.22.0+cu118
+torch==2.1.0
+torchvision==0.16.0
 tqdm==4.67.1
 transformers==4.51.3
 typing_extensions==4.12.2
