1. Quan sát xem GPU đã lên 6.5GB VRAM/8GB chưa + Hiểu Memory, RAM, CPU với VRAM, GPU + 3 cách để load model lên GPU ...
# Em có deploy model 3B ở FP16, theo đúng lý thuyết thì nó sẽ ngốn 6.5 GB VRAM. Nhưng sau khi docker compose xong thì RAM lên tới 15/16GB và localhost:8001/docs ko khởi động được, phải đợi 4-5min nó mới hạ xuống 10/16GB RAM hệ thống thì mới tự động start 8001 mới lên. Và sau khi truy vấn RAM hệ thống thường lên tới 12-13/16GB. Còn check GPU chỉ đang chiếm 1-2GB/8GB VRAM??? ủa đúng ra phải 6.5 VRAM chứ ạ. Chat test thử thì 8001 vẫn ngon vẫn rất bình thường và nhanh ạ.

====

Sau giải đáp ra là: cứ đi nhìn cái Utilization của GPU 0 và bảo quái lạ sao host model về rồi mà GPU ko tăng, trong khi Memory bị tăng.  Thì ra là phải nhìn vào số GB của GPU chứ ko phải nhìn vào phần trăm vì phần trăm đấy là GPU Utilization.

Và phân biệt Memory ở trên task manager chính là RAM chứ ko phải Memorry là cả RAM và RAM

--- a/src/llms-offline/docker-compose.yml
+++ b/src/llms-offline/docker-compose.yml
@@ -7,10 +7,16 @@ services:
       - "8001:8000"
     volumes:
       - ./model:/app/model
+      - ./logs:/app/logs
     deploy:
       resources:
+        limits:
+          memory: 12G
         reservations:
           devices:
             - driver: nvidia
               count: 1
               capabilities: [gpu]
+    environment:
+      - PYTHONUNBUFFERED=1
+      - TORCH_CUDA_ARCH_LIST="8.6"  # Cho RTX 4060
