--- a/src/llms-offline/requirements.txt
+++ b/src/llms-offline/requirements.txt
@@ -1,6 +1,7 @@
-torch>=2.0.0
+torch>=2.1.0
 transformers>=4.36.0
-fastapi>=0.100.0
-uvicorn>=0.22.0
-pydantic>=2.0.0
+fastapi>=0.109.0
+uvicorn>=0.27.0
+pydantic>=2.5.0
+psutil>=5.9.0
 accelerate>=0.25.0 
