--- Docker compose 1 phát (cả llms bên trong) -> ngốn 8min chờ => Thôi bỏ, chuyển qua docker compose llms riêng
1. Ban đầu update: rag_backend, .env, docker compose chung 1 phát cả 4 service: embedding, llms, backend, frontend -> Sau mỗi lần nó lên lại phải đợi 8min cho llms khởi động xong -> quá khó cho fix bug

2. SSau 1h => từ bỏ và quay sang docker compose cho llms riêng tách với 3 thằng còn lại

--- a/src/embedding-model-offline/docker-compose.yml
+++ b/src/embedding-model-offline/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3.8'
 
 services:
-  embedding-api:
+  embedding-model-offline:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: embedding-api
+    image: embedding-model-offline:latest
+    container_name: embedding-model-offline
     ports:
       - "8000:8000"
     volumes:
