Khôi phục lại bản EmbeddingOfffline được, giờ update thêm phần LLms Local là ngon

--- a/src/back-end/.env.example
+++ b/src/back-end/.env.example
@@ -16,4 +16,4 @@ LLM_PROVIDER=local  # hoặc "openai"
 LOCAL_LLM_API_URL=http://localhost:8001  
 
 EMBEDDING_API_URL=http://embedding-service:8000
-LOCAL_LLM_API_URL=http://llms-service:8000
+LOCAL_LLM_API_URL=http://embedding-offline-service:8000
