thheem logg để kiểm tra việc LLM_Provider của backend_rag đang call tới OpenAI hay local. Chú ý khi thay .env phải docker compose down và để ý log 1. openai hoạt động tốt với LLM_provider 2. Còn LLms Local thì ko và nó báo bug

--- a/src/back-end/.env.example
+++ b/src/back-end/.env.example
@@ -9,11 +9,10 @@ HUGGINGFACE_API_KEY= <HUGGINGFACE_API_KEY>
 # OPENAI API KEY FOR EMBEDDING AND CHAT
 OPENAI_API_KEY= <OPENAI_API_KEY>
 
-EMBEDDING_PROVIDER=offline  # hoặc "huggingface"
-EMBEDDING_API_URL=http://localhost:8000  # URL của offline API
-
 LLM_PROVIDER=local  # hoặc "openai"
 LOCAL_LLM_API_URL=http://localhost:8001  
 
 EMBEDDING_API_URL=http://embedding-service:8000
 LOCAL_LLM_API_URL=http://embedding-offline-service:8000
+# Đang dùng URL trong Docker network
+
