Bypass đăng nhập và đăng xuất với; bypass@gmail.com
      // 1. Đăng nhập (signIn): Nếu nhập đúng email bypass@gmail.com và password bypass thì bypass, còn lại dùng Supabase.
      // 2. Đăng xuất (signOut): Nếu user hiện tại là bypass@gmail.com thì chỉ xóa local, không gọi Supabase

--- a/src/back-end/.env.example4_DB
+++ b/src/back-end/.env.example4_DB
@@ -6,6 +6,12 @@ QDRANT_URL=<QDRANT_URL>
 QDRANT_API_KEY=my_super_secret_key
 QDRANT_HOST=localhost
 QDRANT_PORT=6333
+QDRANT_URL = "http://localhost:6333"   # dùng cái này trong create DB để trấnh bị lỗi SSL
+QDRANT_URL = "http://host.docker.internal:6333" 
+# 1. Tương tự LLMs - Qdant và RAG là docker khác network nên cần internal để docker rag nó bắt được 6333 ở bên ngoài internal vào trong. (Chứ RAG ko thể localhost để bắt được vì RAG backend nó đang giao tiếp nội bộ với nhau)
+# 2. Nếu nó chung network thì như: EMBEDDING, chỉ cần để EMBEDDING_API_URL=http://embedding-offline-service:8000
+# 3. Còn nếu dùng localhost thì sao> nếu cả 2 đều export ra ngoài Docker thì có thể dùng localhost
+
 
 # EMBEDDING MODEL
 EMBEDDINGS_MODEL_NAME=sentence-transformers/paraphrase-multilingual-mpnet-base-v2
